Fixing CSS config and extracting CSS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
-@import "./fonts.css";
-@import "./cv-prose.css";
+/* WARNING! DO NOT @import HERE! ADD TO nuxt.config.js INSTEAD! */
 
 @tailwind base;
 
